fix wrapping of parameter names on job submit form
git-svn-id: https://svn.broadinstitute.org/genepattern/trunk@13070 48a7a3f7-ad46-0410-b969-29950918272e

--- a/website/css/frozen/runtaskform_3_8_1.css
+++ b/website/css/frozen/runtaskform_3_8_1.css
@@ -73,14 +73,16 @@ tr.paramDescription td
     padding-bottom: 2px;
 }
 
-.paramsTable td:nth-child(odd)
-{
-    white-space: nowrap;
-}
-
-.paramsTable td:nth-child(even)
+.paramsTable tr td:nth-child(even)
 {
     padding-left: 14px;
+    white-space: normal;
+    word-break: break-all;
+}
+
+.pTitle
+{
+    white-space: nowrap;
 }
 
 .task_header
@@ -151,16 +153,29 @@ tr.paramDescription td
     cursor: copy;
 }
 
-.paramFilesTable
+/*.paramFilesTable
 {
     text-align:left;
-    width: 100%;
+    word-break: break-all;
+    white-space: normal;
 }
+*/
+
+/*
+.paramFilesTable td
+{
+    text-align:left;
+  /*  word-break: break-all;
+    white-space: normal;
+    overflow: hidden;
+}*/
 
 table.paramFilesTable tr td
 {
     height: 10px !important;
-    padding: 4px !important;;
+    padding: 4px !important;
+    white-space: normal;
+    overflow: hidden;
 }
 
 table.paramFilesTable tr td.pfileAction
@@ -210,7 +225,9 @@ button.urlButton
     min-width: 570px;
     margin-bottom: 0;
     display: inline-block;
-    white-space: nowrap;
+    white-space: normal;
+    word-break: break-all;
+    max-width: 50px;
 }
 
 .fileDiv button img
@@ -585,6 +602,9 @@ span.drop-box
     -moz-border-radius: 8px;
     -webkit-border-radius: 8px;
     padding: 8px 6px 6px 6px;
+    white-space: normal;
+    word-break: break-all;
+    max-width: 50px;
 }
 
 
